--- a/wiki/jQueryServerSidePorts.wiki
+++ b/wiki/jQueryServerSidePorts.wiki
@@ -3,3 +3,4 @@ jQuery ports to server-side languages:
  * *ActionScript* - [http://tech.nitoyon.com/blog/2008/01/as3query_alpha.html as3query]
  * *Ruby* - [http://code.whytheluckystiff.net/hpricot/ hpricot]
  * *Perl* - [http://search.cpan.org/~ingy/pQuery/lib/pQuery.pm pQuery]
+ * *Python* - [http://pypi.python.org/pypi/pyquery PyQuery]
